--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </body>
     <title>Tetris</title>
 </head>
-<body>
+<body>    
     
     <template id="player-template">
         <div class="player">
@@ -40,12 +40,12 @@
         </div>
     </template>
 
-    <script src="client/connection-manager.js"></script>
-    <script src="client/tetris-manager.js"></script>
-    <script src="client/arena.js"></script>
-    <script src="client/events.js"></script>
-    <script src="client/player.js"></script>
-    <script src="client/tetris.js"></script>
-    <script src="client/main.js"></script>
+    <script src="../client/connection-manager.js"></script>
+    <script src="../client/tetris-manager.js"></script>
+    <script src="../client/arena.js"></script>
+    <script src="../client/events.js"></script>
+    <script src="../client/player.js"></script>
+    <script src="../client/tetris.js"></script>
+    <script src="../client/main.js"></script>
     
 </html>
